2002-08-01  Sam Steingold  <sds@gnu.org>

	* m4/ln.m4 (CL_PROG_HLN): fixed the "hard links to symlinks" check
	* makemake.in (TEXE, LEXE) [cygwin32]: exe/run
	(distrib): rmrf TOPDIR before making the distribution

2002-08-01  Sam Steingold  <sds@gnu.org>

	* type.lisp (COMPLEX): use UPGRADED-COMPLEX-PART-TYPE,
	just like VECTOR uses UPGRADED-ARRAY-ELEMENT-TYPE

2002-08-01  Sam Steingold  <sds@gnu.org>

	* makemake.in (DISTFILE): strip parens from OS version for cygwin

2002-08-01  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (load-lpt-many): simplified messages
	* init.lisp (load): likewise

2002-08-01  Sam Steingold  <sds@gnu.org>

	cygwin: understand win32 "c:" pathnames
	* pathname.d (PARSE-NAMESTRING) [UNIX_CYGWIN32]: use
	*DEVICE-PREFIX* to parse "c:/gnu/" --> "/cygdrive/c/gnu/"
	* constsym.d (*DEVICE-PREFIX*) [UNIX_CYGWIN32]: added
	* spvw.d (init_symbol_values) [UNIX_CYGWIN32]: defvar *DEVICE-PREFIX*
	* makemake.in [UNIX_CYGWIN32]: better cygwin32 canonicalization;
	less special treatment; add SETQ *DEVICE-PREFIX* to config.lisp

2002-07-31  Sam Steingold  <sds@gnu.org>

	* utils/ccmp2c.c, utils/modprep.c: added
	* utils/ccmp2c.d, utils/modprep.d: removed
	* utils/txt2c.c: no pre-processing is needed
	* makemake.in: do not pre-process ccmp2c.c, modprep.c, txt2c.c

2002-07-31  Sam Steingold  <sds@gnu.org>

	mingw port moving along - in-place only for now
	* configure: handle --with-mingw and pass 'win32gcc gcc' to makemake
	* makemake.in [win32gcc]: no special treatment for libcharset,
	sigsegv, and ffcall
	* Makefile.devel: removed win32gcc
	* win32gcc: removed directory
	* encoding.d [__MINGW32__]: #include <stdio.h> for sprintf()
	* pathname.d (default_drive) [WIN32_NATIVE]: cast chart/cint properly
	* stream.d (rd_ch_keyboard, wr_ch_array_window, wr_ch_window)
	[WIN32_NATIVE]: ditto
	* win32.d (HAVE_LC_MESSAGES) [__MINGW32__]: define to 0
	* win32aux.d (temp_interrupt_handler) [__MINGW32__]: no
	WSACancelBlockingCall() - need a replacement!
