@@ -1,3 +1,11 @@
+2002-08-02  Sam Steingold  <sds@gnu.org>
+
+	* stream.d (make_terminal_stream_) [UNIX_CYGWIN32]: check
+	ttyname() instead of inodes for stdin/out_handle
+	(finish_tty_output) [UNIX_CYGWIN32]: ignore EACCES (in
+	addition to EBADF) for xterm/rxvt
+	Suggested by David Young and Matthias Linder
+
 2002-08-01  Sam Steingold  <sds@gnu.org>
 
 	* m4/ln.m4 (CL_PROG_HLN): fixed the "hard links to symlinks" check
